# Dumka

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/backend/: CPUDevice.cpp  CPUDevice.hpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp
